Closed Bug 1319316 Opened 8 years ago Closed 8 years ago

Fix assert failure in MaskImageData::CreateDrawTarget()

Categories

(Core :: Graphics: WebRender, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(1 file)

During viewing youtube site, I saw assert failure in MaskImageData::CreateDrawTarget().

It expects LayersBackend::LAYERS_BASIC or LayersBackend::LAYERS_CLIENT. We need to add LayersBackend::LAYERS_WR handling to MaskImageData::CreateDrawTarget().
Assignee: nobody → sotaro.ikeda.g
Blocks: webrender
Attachment #8813014 - Flags: review?(matt.woodrow)
Attachment #8813014 - Flags: review?(matt.woodrow) → review+
Pushed by sikeda@mozilla.com:
https://hg.mozilla.org/projects/graphics/rev/805d42464705
Fix assert failure in MaskImageData::CreateDrawTarget() r=mattwoodrow
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: