Bug 1319316 - Fix assert failure in MaskImageData::CreateDrawTarget() r=mattwoodrow